<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sheet_feedback_info"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/dp_16"
    android:paddingBottom="@dimen/dp_80"
    android:paddingHorizontal="@dimen/dp_20"
    android:background="@drawable/bg_bottom_sheet_rounded"
>

    <ImageView
        android:id="@+id/iv_close_info_sheet"
        android:layout_width="@dimen/dp_30"
        android:layout_height="@dimen/dp_30"
        android:src="@drawable/ic_close"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/tv_rate_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate_us_on"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_close_info_sheet"
        android:layout_marginTop="@dimen/dp_20"
        android:textColor="@color/green_light"
        android:textSize="@dimen/ft_20"
        android:textAllCaps="true"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_rate_wrap1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_rate_us"
        android:layout_marginTop="@dimen/dp_20"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
        <TextView
            android:id="@+id/tv_mask_usage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mask_usage"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toLeftOf="@id/tv_social_distancing"
            android:textColor="@color/primary"
            android:textSize="@dimen/ft_18"
            android:paddingVertical="@dimen/dp_5"
            android:paddingHorizontal="@dimen/dp_10"
            android:background="@drawable/rating_item_round_shape"
            />
        <TextView
            android:id="@+id/tv_social_distancing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/social_distancing"
            app:layout_constraintLeft_toRightOf="@id/tv_mask_usage"
            android:layout_marginStart="@dimen/dp_10"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/primary"
            android:textSize="@dimen/ft_18"
            android:paddingVertical="@dimen/dp_5"
            android:paddingHorizontal="@dimen/dp_10"
            android:background="@drawable/rating_item_round_shape"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_rate_wrap2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/cl_rate_wrap1"
        android:layout_marginTop="@dimen/dp_10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
        <TextView
            android:id="@+id/tv_guidance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guidance"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toLeftOf="@id/tv_sanitization"
            android:textColor="@color/primary"
            android:textSize="@dimen/ft_18"
            android:paddingVertical="@dimen/dp_5"
            android:paddingHorizontal="@dimen/dp_10"
            android:background="@drawable/rating_item_round_shape"
            />
        <TextView
            android:id="@+id/tv_sanitization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sanitization"
            app:layout_constraintLeft_toRightOf="@id/tv_guidance"
            android:layout_marginStart="@dimen/dp_10"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/primary"
            android:textSize="@dimen/ft_18"
            android:paddingVertical="@dimen/dp_5"
            android:paddingHorizontal="@dimen/dp_10"
            android:background="@drawable/rating_item_round_shape"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_why_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/why_rate"
        app:layout_constraintTop_toBottomOf="@id/cl_rate_wrap2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/dp_30"
        android:textColor="@color/text_color"
        android:textSize="@dimen/ft_16"
        android:paddingVertical="@dimen/dp_5"
        android:paddingHorizontal="@dimen/dp_10"
        android:textAlignment="center"
        />
    <ImageView
        android:id="@+id/iv_logo_bottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.6"
        android:adjustViewBounds="true"
        android:src="@drawable/img_logo_with_text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_why_rate"
        android:layout_marginTop="@dimen/dp_50"
        />
</androidx.constraintlayout.widget.ConstraintLayout>