<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sheet_feedback_submitted"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/dp_16"
    android:paddingHorizontal="@dimen/dp_20"
    android:paddingBottom="@dimen/dp_80"
    android:background="@drawable/bg_bottom_sheet_rounded"
    tools:context=".views.fragments.RatingFeedbackFragment"
    >


    <TextView
        android:id="@+id/tv_feedback_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feedback_submitted"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/dp_20"
        android:textColor="@color/green"
        android:textSize="@dimen/ft_28"
        android:textStyle="bold"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/tv_rate_feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate_feedback"
        app:layout_constraintTop_toBottomOf="@id/tv_feedback_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/dp_30"
        android:textColor="@color/text_color"
        android:textSize="@dimen/ft_16"
        android:paddingVertical="@dimen/dp_5"
        android:paddingHorizontal="@dimen/dp_10"
        android:textAlignment="center"
        />
    <ImageView
        android:id="@+id/iv_logo_bottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.6"
        android:adjustViewBounds="true"
        android:src="@drawable/img_logo_with_text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_rate_feedback"
        android:layout_marginTop="@dimen/dp_50"
        />
    <LinearLayout
        android:id="@+id/btn_dismiss"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        app:layout_constraintWidth_percent="0.9"
        style="?android:attr/borderlessButtonStyle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo_bottom"
        android:layout_marginTop="@dimen/dp_80"
        android:background="@drawable/round_shape"
        >
        <TextView
            android:id="@+id/tv_submit_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dismiss"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="@dimen/ft_18"
            android:textAllCaps="false"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>