<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.main.MainActivity">


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:fitsSystemWindows="true"
    android:padding="50dp">

    <ImageView
        android:id="@+id/iv_title"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.8"
        android:adjustViewBounds="true"
        android:src="@drawable/img_title"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <TextView
        android:id="@+id/tv_sub_title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_sub_title1"
        app:layout_constraintTop_toBottomOf="@+id/iv_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="40dp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="30sp"
        tools:ignore="AllCaps" />

    <LinearLayout
        android:id="@+id/ll_subtitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_sub_title1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_sub_title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_sub_title2"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="30sp"
            tools:ignore="AllCaps" />
        <ImageView
            android:id="@+id/iv_info"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_info"
            app:layout_constraintBottom_toBottomOf="@id/tv_sub_title2"
            app:layout_constraintLeft_toRightOf="@id/tv_sub_title2"
            android:layout_marginStart="5dp"
            />

    </LinearLayout>

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <per.wsj.library.AndRatingBar
        android:id="@+id/rating_bar"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintWidth_percent="0.9"
        app:starDrawable="@drawable/ic_rating_active"
        app:bgDrawable="@drawable/ic_rating_empty"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:keepOriginColor="true"
        app:starSpacing="30dp"
        android:rating="0"/>
    <LinearLayout
        android:id="@+id/btn_submit"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintWidth_percent="0.9"
        style="?android:attr/borderlessButtonStyle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="80dp"
        android:background="@drawable/btn_round_shape_inactive"
        >
        <TextView
            android:id="@+id/tv_submit_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_title"
            android:textStyle="bold"
            android:textColor="@color/green_light"
            android:textAlignment="center"
            android:textSize="17sp"
            android:textAllCaps="false"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
